# minimble-notes

./: Cargo.toml  LICENSE  README.md
src/: data.rs  lib.rs  main.rs  util.rs
tests/: integration.rs
