[package]
name = "minimble"
version = "0.1.0"
authors = ["TheImaginaryOne <johnathanleung@hotmail.co.nz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
anyhow = "1.0"
clap = "3.0.0-beta.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
directories = "3.0"
path-clean = "0.1"
tempfile = "3.0"

[lib]
name = "minimble"
path = "src/lib.rs"

[[bin]]
name = "minimble-bin"
path = "src/bin/main.rs"
